# lammps-testing

./: .gitignore  Makefile  README.md  collect_goldfiles.sh  nose2.cfg  pyproject.toml  requirements.txt  run_tests.py  setup.py
configurations/: openmp.yml  openmpi.yml  serial.yml  serial_clang.yml  testing.yml  testing_gpu_cuda.yml  testing_gpu_opencl.yml  testing_openmp.yml
containers/: docker.yml
containers/docs/: Dockerfile
containers/jenkins/: basic.txt  plugins.txt  plugins.xml
containers/singularity/: almalinux9.def  centos7.def  centos7_nvhpc.def  centos8.def  fedora30_mingw.def  fedora32_mingw.def  fedora34_mingw.def  fedora36_mingw.def  fedora40_mingw.def  (+18 more)
lammps_testing/: common.py  formats.py  generate_regression_xml.py  lammps_test.py  log.py  regression.py  regression_testing.py  run_regression_test.py  run_tests.py  testrunner.py  tests.py
playbooks/: atlas.yml  atlas2.yml  glados.yml  glados2.yml
scripts/: CMakeBuild.sh  CMakeSerial.sh  CMakeSerialTesting.sh  CMakeTesting.sh  CMakeTestingBuild.sh  Documentation.sh  LAMMPSTesting.sh  LegacyBuild.sh  LegacyRunTests.sh  OpenMPI.sh  OpenMPIClang.sh  RegressionBuild.sh  Run.sh  RunRegressionTests.sh  RunTests.sh  Serial.sh  SerialClang.sh  Shlib.sh  ShlibClang.sh  centos7.yml  fedora.yml  gpu.yml.disabled  intel.yml.disabled  intel_oneapi.yml  intel_sycl.yml  ubuntu.yml  ubuntu_gpu.yml  ubuntu_hip.yml  windows.yml
tests/: test_commands.py  test_examples.py  test_long_range_electrostatics.py  test_package.py  test_regression.py  test_user_omp.py
utils/: correct_lammps_status_checks.py
(+928 files in other folders)
